--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@ margin-left:0;
 margin-right:0;
 }
 
+.thumb:hover{
+	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+
 #dialogInfo{
 	width:850px;
 	margin:0 auto;
